# DarkFactory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  config.example.json  pyproject.toml
darkfactory/: __init__.py  __main__.py  config.py  main.py  main_cli.py
darkfactory/compression/: compressor.py  pruner.py
darkfactory/core/: agent_loop.py  agent_pool.py  context_manager.py  task_engine.py  task_planner.py  validator.py
darkfactory/cron/: scheduler.py
darkfactory/llm/: anthropic_client.py  openai_client.py
darkfactory/plugins/: hooks.py  plugin_registry.py
darkfactory/plugins/builtin/: browser_plugin.py  test_runner_plugin.py
darkfactory/scheduler/: __init__.py
darkfactory/skills/: __init__.py  skill_generator.py  skill_store.py
darkfactory/tools/: executor.py  results.py
docs/: CONFIG.md
scripts/: darkfactory.bat
src/compression/: __init__.py  summarizer.py
src/core/: __init__.py  task.py  task_planner.py  workflow.py
src/cron/: __init__.py  jobs.py
src/llm/: __init__.py  client.py
src/plugins/: __init__.py  plugin.py
src/plugins/builtin/: __init__.py  linter_plugin.py
src/scheduler/: critical_path.py  gantt.py  optimizer.py
src/skills/: skill.py
src/tools/: __init__.py  registry.py
web/backend/: main.py
web/backend/routers/: __init__.py  execution.py  projects.py  tasks.py  websocket.py
web/backend/services/: agent_manager.py  scheduler.py
web/frontend/: index.html  package.json
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/components/: AgentStatus.css  AgentStatus.tsx  Console.css  Console.tsx  GanttChart.css  GanttChart.tsx  TaskBoard.css  TaskBoard.tsx
web/frontend/src/pages/: Dashboard.css  Dashboard.tsx  Execution.css  Execution.tsx  ProjectPlan.css  ProjectPlan.tsx  Settings.css  Settings.tsx
